--- a/Source/CriticalPath.Web/Areas/Admin/Views/Shared/_PagerPartial.cshtml
+++ b/Source/CriticalPath.Web/Areas/Admin/Views/Shared/_PagerPartial.cshtml
@@ -84,3 +84,9 @@
     </ul>
 </nav>
 }
+<script type="text/javascript">
+    function setPager(page) {
+        $('#page').val(page);
+        $('#searchForm').submit();
+    }
+</script>
