JS setPager function renamed as getPagedData. Added refreshData function for submit or call  $.getJSON

--- a/Source/CriticalPath.Web/Areas/Admin/Views/Shared/_IndexScriptsPartial.cshtml
+++ b/Source/CriticalPath.Web/Areas/Admin/Views/Shared/_IndexScriptsPartial.cshtml
@@ -13,7 +13,7 @@
 
         var request = $.get(requestUrl, function (data) {
         }).done(function () {
-            $('#searchForm').submit();
+            refreshData();
         });
         showMessageBox('@MessageStrings.Deleting...', '@MessageStrings.PleaseWait.', false);
 
