--- a/Source/CriticalPath.Web/Views/PurchaseOrders/Approve.cshtml
+++ b/Source/CriticalPath.Web/Views/PurchaseOrders/Approve.cshtml
@@ -20,7 +20,7 @@
                 @Html.DisplayFor(m => m.OrderDate)
             </div>
         </div>
-        @Html.Partial("_PoPartialEdit");
+        @Html.Partial("_PoPartialEdit")
         <div class="row">
             <label class="control-label col-md-2 col-sm-3">
                 @Html.DisplayNameFor(model => model.DueDate)
