--- a/Source/CriticalPath.Web/Views/Shared/_IndexScriptsPartial.cshtml
+++ b/Source/CriticalPath.Web/Views/Shared/_IndexScriptsPartial.cshtml
@@ -14,7 +14,7 @@
 
         var request = $.get(requestUrl, function (data) {
         }).done(function () {
-            $('#searchForm').submit();
+            refreshData();
         });
         showMessageBox('@MessageStrings.Deleting...', '@MessageStrings.PleaseWait.', false);
 
