--- a/Source/CriticalPath.Web/Views/Shared/_Layout.cshtml
+++ b/Source/CriticalPath.Web/Views/Shared/_Layout.cshtml
@@ -70,7 +70,7 @@
     @RenderBody()
     <hr />
     <footer>
-        <p>&copy; @DateTime.Now.Year - Critical Path Application</p>
+        <p>&copy; @DateTime.Now.Year - C.P. App</p>
     </footer>
 </div>
 @RenderSection("scripts", required: false)
