--- a/Source/CriticalPath.Web/Content/Site.css
+++ b/Source/CriticalPath.Web/Content/Site.css
@@ -15,16 +15,19 @@
 .dl-horizontal dt {
     white-space: normal;
 }
-.checkboxText{
-    line-height:25px;
-    vertical-align:bottom;
-    margin-right:2px;
+
+.checkboxText {
+    line-height: 25px;
+    vertical-align: bottom;
+    margin-right: 2px;
 }
+
 .shadedRoundCaption {
     -moz-border-radius: 6px;
     -webkit-border-radius: 6px;
     border-radius: 6px;
 }
+
 .shadedRoundCaption, .shadedCaption {
     color: #DDD;
     background-color: #3a3f44;
@@ -43,6 +46,8 @@
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff484e55', endColorstr='#ff313539', GradientType=0);
     filter: none;
 }
-div.accordion .accordion-group .accordion-heading .accordion-toggle{
-    text-decoration:none;
+
+div.accordion .accordion-group .accordion-heading .accordion-toggle {
+    text-decoration: none;
+    color: #DDD;
 }
