--- a/Source/CriticalPath.Web/Views/Shared/DisplayTemplates/Customer.cshtml
+++ b/Source/CriticalPath.Web/Views/Shared/DisplayTemplates/Customer.cshtml
@@ -7,5 +7,5 @@
 }
 @if (Model != null)
 {
-    <div><a href='/Customers/Details/@Model.Id'>@Model.CompanyName</a></div>
+    <div>@Model.CompanyName</div>
 }
